obsplus 0.1.0:
  - obsplus.structures.fetcher
    * Fixed issue with `time_before` and `time_after` params in `Fetcher`
      (see #168).

obsplus 0.0.6:
  - obsplus.bank
    * Refactored logic for getting bank progress bars, now can use instances
      of obsplus.interfaces.ProgressBar to avoid counting files twice
      and for further customizability (see #106).
    * Removed min_file_for_bar argument in favor of class attribute of
      _min_files_for_bar (see #106).
    * Add support for circular searches on EventBank (see #110).
    * Removed concurrent update features for WaveBank (see #117).
    * Add support for using concurrent.futures Executors to speed up indexing
      and reading files (see #108).
    * WaveBank and event Bank now represent time as an int of nanoseconds, see
      (#131).
    * EventBank now limits the number of obspy Event objects which are held in
      memory during indexing (see #136 and #137).
    * WaveBank.get_gaps_df now accounts for small overlapping file which
      previously caused false gaps to be reported (see #140).
    * Added paths parameter to update_index methods to speed up indexing when
      file locations are predictable (see #144).
    * Removed print statement which fired every time the index of a bank  was
      created or updated (see #144).
    * Updated put_x methods to only index newly added files when update_index
      is True. First mentioned in (#122), implemented in (#144).
    * Removed `concurrent_updates` and `inventory` argument from `WaveBank`.
      see (#147 and #152)
    * The `updated` column in wavebank is now correct (see #146, #147).
    * Fixed issue with using `ProcessPoolExecutor` in EventBank for `put_event`
      and `update_index` (see issues #158, #159, #161).
    * Fixed bug where an EventBank with files containing multiple events would
      duplicate events in the catalog on `get_events`. (See #166).
  - obsplus.interfaces